1998-10-21    <jrb@redhat.com>

	* gnome-popup-help.c: Added popup help.  Everyone should use
	this.

	* libgnomeui.h: added the popup stuff.

	* Makefile.am: added the popup-help stuff.

1998-10-21  David Abilleira  <odaf@nexo.es>

	* gnome-font-picker.h: removed "extern C" which is redundant with
        BEGIN_GNOME_DCLS

        * gnome-color-selector.c: Now it creates a modal dialog box only when
        there is another modal window yet.
        
1998-10-20  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-item.c: Add width_changed signal to icon-text-item.

	* gnome-icon-list.c: (toggle_icon): Make sure we emit a signal
	with the correct index.
	(icon_event): Generate events for button-2 and 3

	* gnome-icon-list.c (gnome_icon_list_icon_is_visible): Fix wrong
	return value. 

1998-10-19  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (icon_event): call toggle_icon on double click
	events. 

1998-10-15  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_new): Fix merge  mistake.

1998-10-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c: I am an idiot.  I did not think anyone would
	ever override the canvas event handlers, so I was happily
	returning FALSE from all of them.
	(gnome_canvas_button): Return the appropriate value from
	emit_event().
	(gnome_canvas_motion): Likewise.
	(gnome_canvas_key): Likewise.
	(gnome_canvas_focus_in): Likewise.
	(gnome_canvas_focus_out): Likewise.
	(gnome_canvas_crossing): Return the appropriate value from
	pick_current_item().

	(emit_event): Now it returns a boolean value that indicates
	whether the event was handled by someone or not.
	(pick_current_item): Likewise.

1998-10-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (book_drop): something seems to have been screwed
	up during owen's last commit. fixed now.

1998-10-18  Federico Mena Quintero  <federico@nuclecu.unam.mx>
