@@ -1,3 +1,9 @@
+1998-10-22  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-icon-item.c (recompute_bounding_box): Use item relative
+	cordinates, to support groups.
+	(iti_paint_text): Same.
+
 1998-10-21    <jrb@redhat.com>
 
 	* gnome-popup-help.c: Added popup help.  Everyone should use
